--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,8 +15,26 @@
         android:theme="@style/Theme.Android14"
         tools:targetApi="31">
         <activity
-            android:name=".practicas.graphiccomponents.BasicComponentsActivity"
-            android:exported="true" >
+            android:name=".practicas.graphiccomponents.list.DetailAnimalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".practicas.fragments.bottomnav.BottomNavActivity"
+            android:exported="true" />
+        <activity
+            android:name=".practicas.fragments.navigation.FragmentNavigationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".practicas.fragments.FirstFragmentActivity"
+            android:exported="true" />
+        <activity
+            android:name=".practicas.compose.ComposeFormsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".practicas.compose.ComposeWelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".practicas.graphiccomponents.list.RecyclerViewActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +42,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".practicas.graphiccomponents.BasicComponentsActivity"
+            android:exported="true" />
+        <activity
             android:name=".practicas.graphiccomponents.ConstraintLayoutActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".practicas.graphiccomponents.RelativeLayoutActivity"
             android:exported="false" />
