--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
         android:theme="@style/Theme.Android14"
         tools:targetApi="31">
         <activity
+            android:name=".practicafinal.WelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".practicafinal.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".practicas.graphiccomponents.list.DetailAnimalActivity"
             android:exported="false" />
         <activity
@@ -22,7 +34,7 @@
             android:exported="true" />
         <activity
             android:name=".practicas.fragments.navigation.FragmentNavigationActivity"
-            android:exported="true" />
+            android:exported="true"/>
         <activity
             android:name=".practicas.fragments.FirstFragmentActivity"
             android:exported="true" />
@@ -34,13 +46,7 @@
             android:exported="false" />
         <activity
             android:name=".practicas.graphiccomponents.list.RecyclerViewActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".practicas.graphiccomponents.BasicComponentsActivity"
             android:exported="true" />
